chore: update deps

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "astro-icon";
+import { Icon } from "astro-icon/components";
 import Page from "../layouts/Page.astro";
 import Wideness from "../components/Wideness";
 ---
