--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Page from "../layouts/Page.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import { Parallax } from "../components/Parallax";
 import fetchApi from "../lib/strapi";
 import type Post from "../interfaces/post";
