fix: a bunch of broken things

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,38 +4,38 @@ const currentYear = new Date().getFullYear();
 
 <footer class="mx-auto mt-auto max-w-screen-md px-4 py-12">
   <div class="flex flex-col items-center gap-8 text-sm">
-    <div class="flex flex-col items-center gap-6 sm:flex-row">
+    <div class="flex flex-col items-center gap-6 font-light sm:flex-row">
       <a
         href="mailto:contact@mrlaude.com"
-        class="text-black hover:underline"
+        class="text-black hover:underline dark:text-white"
         aria-label="Email"
       >
         contact@mrlaude.com
       </a>
       <a
         href="https://github.com/martinryberglaude"
-        class="text-black hover:underline"
+        class="text-black hover:underline dark:text-white"
         aria-label="GitHub"
       >
         github
       </a>
       <a
         href="https://linkedin.com/in/martinryberglaude"
-        class="text-black hover:underline"
+        class="text-black hover:underline dark:text-white"
         aria-label="LinkedIn"
       >
         linkedin
       </a>
       <a
         href="https://bsky.app/profile/mrlaude.com"
-        class="text-black hover:underline"
+        class="text-black hover:underline dark:text-white"
         aria-label="Bluesky"
       >
         bluesky
       </a>
     </div>
-    <div>
-      <p class="text-sm text-black">
+    <div class="font-medium">
+      <p class="text-sm text-black dark:text-white">
         &copy; {currentYear}
       </p>
     </div>
