--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -18,6 +18,6 @@ const formattedDate = new Intl.DateTimeFormat(
 ).format(new Date(date));
 ---
 
-<time datetime={date.toISOString()} class="text-sm text-black">
+<time datetime={date.toISOString()} class="text-sm text-black dark:text-white">
   {formattedDate}
 </time>
