--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,16 +4,23 @@
 
 <header class="w-full py-6">
   <div
-    class="container mx-auto flex max-w-screen-md flex-col items-center justify-center"
+    class="container mx-auto flex max-w-screen-md flex-col items-center justify-center font-light"
   >
     <nav>
       <ul class="flex space-x-8">
-        <li><a href="/" class="text-black hover:underline">home</a></li>
         <li>
-          <a href="/articles" class="text-black hover:underline">articles</a>
+          <a href="/" class="text-black hover:underline dark:text-white">home</a
+          >
         </li>
         <li>
-          <a href="/contact" class="text-black hover:underline">contact</a>
+          <a href="/articles" class="text-black hover:underline dark:text-white"
+            >articles</a
+          >
+        </li>
+        <li>
+          <a href="/contact" class="text-black hover:underline dark:text-white"
+            >contact</a
+          >
         </li>
       </ul>
     </nav>
