--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const posts = (await getCollection("blog")).sort(
 
     <section class="flex flex-col gap-y-6">
       <h2 class="ml-6 text-2xl font-light text-black dark:text-white">
-        Articles
+        Latest articles
       </h2>
       <ul class="flex flex-col gap-6">
         {
@@ -75,7 +75,7 @@ const posts = (await getCollection("blog")).sort(
           <span
             class="absolute inset-x-0 bottom-0 -z-10 h-[50%] bg-[#7FFF00]/30"
           ></span>
-          All posts →
+          All articles →
         </a>
       </div>
     </section>
