--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import "../styles/global.css";
 const { title, description } = Astro.props;
 ---
 
-<html lang="en" class="min-h-[100vh] bg-[#f5f4f0] font-mono">
+<html lang="en" class="min-h-[100vh] bg-[#f5f4f0] font-mono dark:bg-[#10100e]">
   <head>
     <BaseHead title={title} description={description} />
   </head>
