--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -29,7 +29,7 @@ const { Content } = await render(post);
       )
     }
     <article
-      class="prose sm:prose-md md:prose-lg prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-light !max-w-none pt-12"
+      class="prose sm:prose-md md:prose-lg prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-light mark !max-w-none pt-12"
     >
       <div class="flex items-start justify-between">
         <h1>{post.data.title}</h1>
