--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -31,7 +31,7 @@ const { Content } = await render(post);
     <article
       class="prose sm:prose-md md:prose-lg prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-light mark !max-w-none pt-12"
     >
-      <div class="flex items-start justify-between">
+      <div class="flex flex-col items-start">
         <h1>{post.data.title}</h1>
         <FormattedDate date={post.data.pubDate} />
       </div>
