fix: syntax highlight colors

--- a/src/pages/gamesquad.astro
+++ b/src/pages/gamesquad.astro
@@ -33,7 +33,7 @@ import GlobeSimple from "phosphor-astro/GlobeSimple.astro";
           class="text-md inline-flex min-w-30 items-center justify-center gap-2 rounded-sm border border-black bg-black p-2 font-extralight text-white hover:underline dark:border-white"
         >
           <GlobeSimple class="w-4" />
-          Visit website
+          Visit GameSquad
         </a>
       </div>
     </section>
@@ -191,7 +191,7 @@ import GlobeSimple from "phosphor-astro/GlobeSimple.astro";
           class="text-md inline-flex min-w-30 items-center justify-center gap-2 rounded-sm border border-black bg-black p-2 font-extralight text-white hover:underline dark:border-white"
         >
           <GlobeSimple class="w-4" />
-          Try GameSquad
+          Visit GameSquad
         </a>
       </div>
     </section>
