--- a/src/pages/solsken.astro
+++ b/src/pages/solsken.astro
@@ -38,7 +38,7 @@ import Screenshot3 from "../assets/images/solsken_screenshot3.png";
           class="text-md inline-flex min-w-30 items-center justify-center gap-2 rounded-sm border border-black bg-black p-2 font-extralight text-white hover:underline dark:border-white"
         >
           <GlobeSimple class="w-4" />
-          Visit website
+          Visit Solsken
         </a>
       </div>
     </section>
@@ -187,7 +187,7 @@ import Screenshot3 from "../assets/images/solsken_screenshot3.png";
           class="text-md inline-flex min-w-30 items-center justify-center gap-2 rounded-sm border border-black bg-black p-2 font-extralight text-white hover:underline dark:border-white"
         >
           <GlobeSimple class="w-4" />
-          Visit website
+          Visit Solsken
         </a>
       </div>
     </section>
