--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
 import { render } from "astro:content";
-import { Image } from "astro:assets";
+import { Image, Picture } from "astro:assets";
 import Layout from "../../layouts/Layout.astro";
 import FormattedDate from "../../components/FormattedDate.astro";
 export async function getStaticPaths() {
@@ -21,7 +21,7 @@ const { Content } = await render(post);
   <div class="py-12">
     {
       post.data.heroImage && (
-        <Image
+        <Picture
           src={post.data.heroImage}
           alt={post.data.title}
           class="w-full object-cover object-bottom"
