--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -14,9 +14,10 @@ const posts = (await getCollection("blog")).sort(
       posts.map((post) => (
         <li>
           <a href={`/articles/${post.id}/`} class="group">
-            <h4 class="title text-xl font-light group-hover:underline dark:text-white">
+            <h4 class="title text-md font-medium group-hover:underline dark:text-white">
               &gt; {post.data.title}
             </h4>
+            <p class="text-sm font-light">{post.data.description}</p>
             <p class="date">
               <FormattedDate date={post.data.pubDate} />
             </p>
