fix: social links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,13 +53,13 @@ const posts = (await getCollection("blog")).sort(
             </a>
 
             <a
-              href="https://x.com/martinryberglaude"
+              href="https://x.com/mrlaudeirl"
               class="text-md inline-flex h-10 min-w-28 items-center justify-center gap-2 rounded-sm bg-stone-200 text-sm font-extralight text-black hover:bg-stone-200/50 dark:border-white"
             >
               <XLogo class="w-4" />
             </a>
             <a
-              href="https://bsky.app/profile/martinryberglaude.bsky.social"
+              href="https://bsky.app/profile/mrlaude.com"
               class="text-md inline-flex h-10 min-w-28 items-center justify-center gap-2 rounded-sm bg-stone-200 text-sm font-light text-black hover:bg-stone-200/50 dark:border-white"
             >
               <BlueskyLogo class="w-4" width="16" height="16" fill="black" />
