feat: redesign more

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -32,7 +32,7 @@ const { Content } = await render(post);
       class="prose sm:prose-md prose-neutral dark:prose-invert prose-headings:font-light prose-code:font-jetbrains prose-p:font-light mark !max-w-none pt-12"
     >
       <div class="flex flex-col items-start">
-        <h1 class="!text-2xl !font-medium">
+        <h1 class="!font-serif !text-4xl !font-medium">
           {post.data.title}
         </h1>
         <FormattedDate date={post.data.pubDate} />
