--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -53,7 +53,13 @@ const { title, description, image } = Astro.props;
   type="font/woff2"
   crossorigin
 />
-
+<link
+  rel="preload"
+  href="/fonts/Lora.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
