fix: buttons on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,9 +34,7 @@ const posts = (await getCollection("blog")).sort(
             Swedish guy passionate about software, design, and anything
             inbetween.
           </p>
-          <div
-            class="mx-auto grid max-w-xs grid-cols-2 gap-4 md:mx-0 md:max-w-none"
-          >
+          <div class="grid grid-cols-2 gap-4 md:mx-0 md:max-w-none">
             <div
               class="relative h-10 rounded border border-black bg-[url('/src/assets/images/texture.png')] bg-cover"
             >
@@ -65,7 +63,7 @@ const posts = (await getCollection("blog")).sort(
             >
               <a
                 href="https://x.com/mrlaudeirl"
-                class="absolute inset-0 inline-flex h-full w-full -translate-x-[2px] -translate-y-[2px] items-center justify-center gap-2 rounded border border-black bg-[#62cfbf] px-5 text-sm font-medium text-black transition hover:translate-x-0 hover:translate-y-0 hover:border-transparent"
+                class="absolute inset-0 inline-flex h-full w-full -translate-x-[2px] -translate-y-[2px] items-center gap-2 rounded border border-black bg-[#62cfbf] px-5 text-sm font-medium text-black transition hover:translate-x-0 hover:translate-y-0 hover:border-transparent"
               >
                 <XLogo class="w-4" />
               </a>
@@ -75,7 +73,7 @@ const posts = (await getCollection("blog")).sort(
             >
               <a
                 href="https://bsky.app/profile/mrlaude.com"
-                class="absolute inset-0 inline-flex h-full w-full -translate-x-[2px] -translate-y-[2px] items-center justify-center gap-2 rounded border border-black bg-[#62cfbf] px-5 text-sm font-medium text-black transition hover:translate-x-0 hover:translate-y-0 hover:border-transparent"
+                class="absolute inset-0 inline-flex h-full w-full -translate-x-[2px] -translate-y-[2px] items-center gap-2 rounded border border-black bg-[#62cfbf] px-5 text-sm font-medium text-black transition hover:translate-x-0 hover:translate-y-0 hover:border-transparent"
               >
                 <BlueskyLogo class="w-4" width="16" height="16" />
                 Bluesky
