fix: dark mode issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,9 @@ const posts = (await getCollection("blog")).sort(
             </div>
           </div>
           <div class="flex flex-1 flex-col justify-end">
-            <p class="text-md text-center font-light text-black md:text-start">
+            <p
+              class="text-md text-center font-light text-black md:text-start dark:text-white"
+            >
               Founding engineer @ <a href="https://ednia.se" class="underline"
                 >Ednia</a
               >
